tests/ui/mux/fails_on_empty_input_list.stderr
error: unexpected end of input, At least one variant is required
 --> $DIR/fails_on_empty_input_list.rs:4:5
  |
4 |     mux!();
  |     ^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
