tests/ui/mux/fails_on_empty_input_list.rs
use mux_stream_macros::mux;

fn main() {
    mux!();
    mux!(MyEnum {});
}
